refactor: reduce disabled cursor importance

--- a/packages/preferences/core/src/styles/css/drawer/controls.css
+++ b/packages/preferences/core/src/styles/css/drawer/controls.css
@@ -624,7 +624,7 @@
       opacity: 0.5;
 
       & * {
-        cursor: not-allowed !important;
+        cursor: not-allowed;
       }
 
       &:hover .transition-preset-label {
